<resources>
    <string name="app_name">WorterTest v0.5</string>
    <string name="login_title">Welcome to login</string>
    <string name="login_protocols">已阅读并同意《用户注册协议》和《隐私协议》</string>
    <string name="main">本源</string>
    <string name="original">原语</string>
    <string name="search">速查</string>
    <string name="my">我的</string>
    <string name="date">March 24th</string>
    <string name="dayofweek">Thursday</string>
    <string name="more">查看全部</string>
    <string name="vowels">元音</string>
    <string name="vowels_long">长元音</string>
    <string name="vowels_short">短元音</string>
    <string name="vowels_double">双元音</string>
    <string name="consonants">辅音</string>
    <string name="consonants_clear">清辅音</string>
    <string name="consonants_turbid">浊辅音</string>
    <string name="consonants_nose">鼻音</string>
    <string name="consonants_tongue">舌侧音</string>
    <string name="consonants_semi">半元音</string>
    <string name="input_num">请输入数字</string>
    <string name="word_trans">n. 花园，菜园，果园；庭园；公园；（用于街名）街，广场\nv. 做园艺工作，种植花木</string>
    <string name="updateuser">编辑资料</string>

    <string name="daily_record">Daily Record</string>
    <string name="setting">系统设置</string>
    <string name="darkmode">深色模式</string>
    <string name="development">联系开发者</string>
    <string name="string_email" formatted="false">Email: ssoonngg0924@foxmail.com</string>
    <string name="string_weibo" formatted="false">@喜欢皮卡丘的宋宋</string>
    <string name="string_github" formatted="false">@SSONNGG</string>
    <string name="about">关于</string>继续
    <string name="version">版本号：早期开发版本</string>

    <string name="study_memorize">记忆模式</string>
    <string name="study_symbol">音标</string>
    <string name="study_alphabet">字母及其字母组合</string>
    <string name="study_pronun">发音</string>
    <string name="study_btngo">继续</string>
    <string name="title_activity_article_info">ArticleInfoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>