<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_study"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_background_blue"
    tools:context=".fragment.StudyFragment">

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="35dp">

        <TextView
            android:id="@+id/tv_symbol_content"
            android:text="[ɑ:]"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/study_symbol"
            android:textColor="@color/deep_skyblue"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_alphabet"
            android:text="ar,a"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/study_alphabet"
            android:textColor="@color/deep_skyblue"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:paddingVertical="3dp"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/content_text_yellow"
            android:text="@string/study_pronun"
            android:textAlignment="center"
            android:textColor="@color/content_background_blue"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_symbol_pronun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="上下齿张开，嘴巴张大为圆形，舌身后缩，舌后部稍抬高，由喉部发类似“啊”的音。"
            android:textAlignment="center"
            android:textColor="@color/deep_skyblue"
            android:textSize="16sp" />

        <top.androidman.SuperButton
            android:id="@+id/btn_next"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:padding="15dp"
            app:border_color="@color/white"
            app:border_width="2dp"
            app:corner="30dp"
            app:text="@string/study_btngo"
            app:textColor="@color/white"
            app:textSize="18sp"
            app:color_normal="@color/content_background_blue" />

    </LinearLayout>


</LinearLayout>